'created a sql->python codeblock for mhs'

--- a/capstone.env
+++ b/capstone.env
@@ -1,1 +1,6 @@
 
+host='data-analytics-course-2.c8g8r1deus2v.eu-central-1.rds.amazonaws.com'
+port='5432'
+database='postgres'
+user='mattiseydel'
+password='tJqTGNLkyKcIPwj6'
